syntax="proto3";
package users;

service Users {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

    // rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message CreateUserResponse {
    string id = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UpdateUserResponse {
    string id = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string id = 1;
}

// message GetAllUsersRequest {
// }

// message GetAllUsersResponse {
//     repeated User users = 1;
// }